Version ClaSS-0.8.3 release (2006/12/12)
----------------------------------------

Moved formfunctions to bookfunctions and userinterface to hostfunctions.

Basic absence lists added to the register.

Bug-fix to eliminate multiple assessments cells being printed. Now
uses the assessment element to check they only exist once.

Added requiredor class to the javascript validation for eitheror
fields. Implemented in the reportbook to start with.

Changed MarkBook table colours to match the other books.

Cosmetic changes to the marktable including addition of a shortcut
link for student_view.

Moved out the page variables from each of the book host pages to
scripts/book_variables.php.

Reorganised the infobook search to allow onsidechange for the groups.

Version ClaSS-0.8.2 release (2006/11/30)
----------------------------------------

First working version of the register completed. Now records
absent or present status; when present lateness; when absent a absence code.

Added create_register to the install process
which creates two new tables, event and attendance.

New javascript extension to the UI added for highlighting selected
table columns and student rows. Currently only implemented in the
register. Uses a css class "selected".

The css of the sideoptions has been cleaned up with a new class selery.

Moved commendate to a default value in commentDisplay and moved to
using mktime to do the claculation.
 
Removed the unused date variable from the User class.

Have dropped the nicetitles code in favour of the neater leaner
qTip. This means all the popup title attributes are now moved out to
span elements. All much tidier.

Added to the css and html_functions tp provide a new "selery" class
which replaces the ugly select elements on the sideoptions. Requires
two lines of javascript to work and part of the userinterface code.

Increased the length of the email field in the guardian table.

Added js for font resizing using a third sidebutton in the logbook.
