@@ -1,6 +1,6 @@
 /***************************************************************************/
-/*										parentstyle.css*/
-/* All the styles needed by the top-level parent page*/
+/*										hoststyle.css*/
+/* All the styles needed by the top-level host page*/
 /***************************************************************************/
 
 
