@@ -6,7 +6,7 @@
 	<meta name="copyright" content="Copyright 2002, 2003, 2004, 2005
 	Stuart Thomas Johnson. All trademarks acknowledged. All rights reserved." />
 	<meta name="licence" content="GNU General Public License version 2" />
-	<link rel="stylesheet" type="text/css" href="../css/viewstyle.css" />
+	<link rel="stylesheet" type="text/css" href="../css/bookstyle.css" />
   </head>
 
 	<body>
