@@ -52,7 +52,7 @@ $comment=js_addslashes($incom);
 <meta name="copyright" content="Copyright 2002-2006 S T Johnson.  All trademarks acknowledged. All rights reserved" />
 <meta name="version" content='<?php print "$CFG->version"; ?>' />
 <meta name="licence" content="GNU General Public License version 2" />
-<link id="viewstyle" rel="stylesheet" type="text/css" href="../../css/viewstyle.css" />
+<link id="viewstyle" rel="stylesheet" type="text/css" href="../../css/bookstyle.css" />
 <link id="viewstyle" rel="stylesheet" type="text/css" href="../../css/commentwriter.css" />
 <script language="JavaScript" type="text/javascript" src="../../js/bookfunctions.js"></script>
 </head>
