@@ -31,7 +31,7 @@
 <meta name="version" content='<?php print "$CFG->version"; ?>' />
 <meta name="licence" content="GNU General Public License version 2" />
 <style type="text/css">@import url(lib/jscalendar/skins/aqua/theme.css);</style>
-<link rel="stylesheet" type="text/css" href="css/viewstyle.css" />
+<link rel="stylesheet" type="text/css" href="css/bookstyle.css" />
 <link rel="stylesheet" type="text/css" href="css/selery.css" />
 <link rel="stylesheet" type="text/css" href="css/<?php print $book; ?>.css" />
 <script language="JavaScript" type="text/javascript">
